[package]
name    = "nokku"
version = "0.1.0"
edition = "2018"

license = "WTFPL"
authors = ["meh. <meh@schizofreni.co>"]

[dependencies]
dotenv = "0.15"
clap = "3.0.0-beta.1"

thiserror = "1"
color-eyre = "0.4"
color-backtrace = "0.4"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
pretty-hex = "0.1"
indicatif = "0.15"

futures = "0.3"
socket = { package = "socket2", version = "0.3" }
packet = { version = "0.1.3" }
get_if_addrs = "0.5"
libc = "0.2"

serde = { version = "1", features = ["derive"] }
bincode = "1"
bytes = { version = "0.5", features = ["serde"] }
base64 = "0.12"
bounded-vec-deque = "0.1"
shellexpand = "2"

rand = "0.7"
twox-hash = "1"
bloom2 = "0.1"
x25519 = { package = "x25519-dalek", version = "0.6" }
sha2 = "0.9"
hkdf = "0.9"
aead = "0.3"
chacha20poly1305 = "0.5"
